--- a/online-learning/data-jpa/data-jpa/src/main/resources/application.yml
+++ b/online-learning/data-jpa/data-jpa/src/main/resources/application.yml
@@ -11,6 +11,12 @@ spring:
       hibernate:
 #        show_sql: true # 콘솔 찍기
         format_sql: true
+  data:
+    web:
+      pageable:
+        default-page-size: 10
+        max-page-size: 2000
+        one-indexed-parameters: true
 
 logging.level:
   org.hibernate.SQL: debug # 로깅
