--- a/online-learning/data-jpa/data-jpa/src/main/resources/application.yml
+++ b/online-learning/data-jpa/data-jpa/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       pageable:
         default-page-size: 10
         max-page-size: 2000
-        one-indexed-parameters: true
+        one-indexed-parameters: false
 
 logging.level:
   org.hibernate.SQL: debug # 로깅
