--- a/online-learning/querydsl/querydsl/build.gradle
+++ b/online-learning/querydsl/querydsl/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
 
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
@@ -60,7 +62,7 @@ querydsl {
     querydslSourcesDir = querydslDir
 }
 sourceSets {
-    main.java.srcDir querydslDir
+    main.java.srcDir querydslDir // Q파일 import
 }
 configurations {
     querydsl.extendsFrom compileClasspath
