--- a/blog/build.gradle
+++ b/blog/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     implementation 'org.openjdk.jmh:jmh-core:1.35'
     implementation 'org.openjdk.jmh:jmh-generator-annprocess:1.35'
     implementation 'com.google.guava:guava:31.0.1-jre'
+    testImplementation 'org.assertj:assertj-core:3.22.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
 }
 
 test {
