--- a/online-learning/parmercy-map/build.gradle
+++ b/online-learning/parmercy-map/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	testImplementation('org.spockframework:spock-spring:2.1-groovy-3.0') // 스프링과 같이 사용하기 위해
 
 	testImplementation('net.bytebuddy:byte-buddy:1.9.3') // 런타임에 클래스 기반 mock을 만들기 위해서 필요
+
+	testImplementation 'org.testcontainers:spock:1.17.1'
+	testImplementation 'org.testcontainers:mariadb:1.17.1'
 }
 
 tasks.named('test') {
